--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "This is the backend server for the 'chat.snelsi.now.sh' site, forked from Adrian Hajdin git hub project https://github.com/adrianhajdin/project_chat_application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [
     "socket.io",
