--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "latest"
   },
+  "license": "Apache-2.0",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
