--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": false,
   "dependencies": {
-    "@material-ui/core": "^4.9.3",
+    "@material-ui/core": "^4.9.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-emoji": "^0.5.0",
@@ -13,15 +13,15 @@
     "react-scroll-to-bottom": "^1.3.2",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.2"
   },
   "devDependencies": {
     "@types/node": "latest",
-    "@types/react": "latest",
+    "@types/react": "16.9.22",
     "@types/react-dom": "latest",
     "@types/react-router-dom": "latest",
     "@types/socket.io-client": "^1.4.32",
-    "@types/styled-components": "latest"
+    "@types/styled-components": "5.0.0"
   },
   "license": "Apache-2.0",
   "scripts": {
