--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,10 @@
     "typescript": "^3.8.2"
   },
   "devDependencies": {
-    "@types/node": "latest",
+    "@types/node": "^13.9.1",
     "@types/react": "16.9.22",
-    "@types/react-dom": "latest",
-    "@types/react-router-dom": "latest",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "5.0.0"
   },
