--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": false,
   "dependencies": {
-    "@material-ui/core": "^4.9.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@material-ui/core": "^4.9.7",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-emoji": "^0.5.0",
     "react-feather": "^2.0.3",
     "react-router-dom": "^5.1.2",
@@ -13,15 +13,15 @@
     "react-scroll-to-bottom": "^1.3.2",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.1",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/node": "^13.9.1",
-    "@types/react": "16.9.22",
+    "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/socket.io-client": "^1.4.32",
-    "@types/styled-components": "5.0.0"
+    "@types/styled-components": "^5.0.1"
   },
   "license": "Apache-2.0",
   "scripts": {
